--- a/wishlist/package.json
+++ b/wishlist/package.json
@@ -22,6 +22,7 @@
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
     "redux": "^4.1.2",
+    "redux-actions": "^2.6.5",
     "redux-thunk": "^2.4.1",
     "typesafe-actions": "^5.1.0",
     "typescript": "^4.1.2",
